# qt-projects

./: .gitattributes  .gitignore
ProductChecker/: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  ProductChecker.pro
ProductChecker/.qtc_clangd/: compile_commands.json
ProductChecker/.qtc_clangd/.cache/clangd/index/: QFileDialog.A4AA2F4C3F866B85.idx  QHBoxLayout.0B831D044668D25A.idx  QInputDialog.390712B614DD7183.idx  QMenuBar.0E52F1D11E7F6CC9.idx  QObject.FB3EB82416B4C1C0.idx  QStatusBar.08BB1F4FCF80374E.idx  QTimer.9782003C4FCC346E.idx  QVBoxLayout.45C05CD04CDF5C26.idx  affine.hpp.8A919E89AACAAA2E.idx  all_indices.h.518CCAD970BE9B43.idx  allocator.h.A21D64012141BD1A.idx  any.h.9F0F7E1A4BA03A95.idx  aruco_board.hpp.C73F3EE961C6273F.idx  aruco_detector.hpp.B92010F6BA64B48D.idx  aruco_dictionary.hpp.8028FB00AAFF2708.idx  assert.h.F20FE06AD212D3D5.idx  async.hpp.26D095082006A0CE.idx  autotuned_index.h.100FEC7CC360CEB5.idx  background_segm.hpp.EE78BB4A66133B3E.idx  barcode.hpp.11A3CA8455A62AF6.idx  base.hpp.07EF94E9F1F113F1.idx  blenders.hpp.3979F5FE36FBC490.idx  bufferpool.hpp.78D2F8D43593369F.idx  calib3d.hpp.F1CCDBF6734F6408.idx  camera.cpp.867A3EE49027D569.idx  camera.h.27BAC6F9839146EA.idx  camera.hpp.08005F7B047FE24E.idx  cctype.A091C37B7B594B7A.idx  cfloat.6928CC7EEAF8A3AD.idx  charuco_detector.hpp.926D855187D7457D.idx  check.hpp.21E290C6F8D8DABC.idx  climits.F8257661698F81C5.idx  cmath.D2119E4A5DC4E8D2.idx  complex.A64BF1F6F7B4E258.idx  composite_index.h.F5941D0DAAC12B00.idx  config.h.1483EF66B3B0BDD3.idx  core.hpp.3E2D8A2A3124C009.idx  cstdio.FC01D4046FC015B4.idx  cstdlib.C408526F0CE2145E.idx  cstring.331FD0B0BEA77600.idx  (+266 more)
ProductChecker/form/: mainwindow.ui
ProductChecker/include/: camera.h  detectionresultwindow.h  mainwindow.h  objectdetector.h
ProductChecker/package/release/: start.bat
ProductChecker/scripts/: create_single_exe.ps1  package.bat  package.ps1  package_simple.bat
ProductChecker/src/: camera.cpp  detectionresultwindow.cpp  mainwindow.cpp  objectdetector.cpp
